version/0.7/_sources/_examples/00-basic/05-surface_traces_lic.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "_examples/00-basic/05-surface_traces_lic.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download__examples_00-basic_05-surface_traces_lic.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr__examples_00-basic_05-surface_traces_lic.py:


.. _surface_traces_lic:

Surface Restricted Traces and Line Integral Convolution
=======================================================

Utilze EnSight to investigate two types of surface streamlines:
Surface Restricted Traces (using Particle Trace)
and LIC (Line Integral Convolution)

Intended to work with EnSight version 24.2 or later

.. GENERATED FROM PYTHON SOURCE LINES 16-20

Start an EnSight session
------------------------
Launch and connect to an instance of EnSight.
This example uses a local EnSight installation.

.. GENERATED FROM PYTHON SOURCE LINES 20-28

.. code-block:: default

    from ansys.pyensight.core import LocalLauncher

    session = LocalLauncher().start()

    # Setup shortcuts for long winded calls.
    eocore = session.ensight.objs.core
    eoutil = session.ensight.utils


.. GENERATED FROM PYTHON SOURCE LINES 29-34

Load a dataset
--------------
Load Shuttle Session file included in the EnSight installation and render

.. image:: /_static/05_srt_lic_0.png

.. GENERATED FROM PYTHON SOURCE LINES 34-42

.. code-block:: default


    session.ensight.objs.ensxml_restore_file(
        f"{session.cei_home}/ensight{session.cei_suffix}gui/demos/Shuttle Basic.ens"
    )
    session.ensight.view.highlight_parts("OFF")
    session.ensight.view_transf.fit(0)
    session.show("image", width=800, height=600)


.. GENERATED FROM PYTHON SOURCE LINES 43-49

Option 1. Using Particle Trace to create Surface Restricted Traces
------------------------------------------------------------------
Using a Particle Trace capability
Parent Part and Emit part are the same part.
Surface Restriction is ON.
.. image:: /_static/05_srt_lic_1.png

.. GENERATED FROM PYTHON SOURCE LINES 49-66

.. code-block:: default


    emitter_part = eoutil.parts.select_parts_by_dimension(2)
    parent_parts = emitter_part
    npts = 1500  # number of emitters
    vector_var = eocore.VARIABLES["Momentum"][0]  # Vector variable to use

    SRTpart = eoutil.parts.create_particle_trace_from_parts(
        "SurfaceRestrictedTrace",
        vector_var,
        parts=emitter_part,
        source_parts=parent_parts,
        direction="+/-",
        surface_restrict=True,
        num_points=npts,
    )
    session.show("image", width=800, height=600)


.. GENERATED FROM PYTHON SOURCE LINES 67-72

Change Visual Attributes
----------------------------------------------------------
 Modify the attributes of the Surface Restricted Traces to
 be visually closer to Flourescene or Titantiam Dioxide (experimental use)
.. image:: /_static/05_srt_lic_2.png

.. GENERATED FROM PYTHON SOURCE LINES 72-77

.. code-block:: default


    SRTpart.colorbyrgb = [0, 1, 0]
    SRTpart.OPAQUENESS = 0.25
    session.show("image", width=800, height=600)


.. GENERATED FROM PYTHON SOURCE LINES 78-86

Try Line Integral Convolution (LIC) instead
----------------------------------------------------------
 As we don't already have a near-surface, non-zero vector defined we need to create 'Offset' Variable.
 Create Offset Variable for Value of Momentum at 2.e-5 distance into fluid domain
 Specify Offset Variable as the variable for LIC.
 Specify High Contrast and 1 length for the LIC
 Specify that we want to see LIC for the Shuttle Surface
.. image:: /_static/05_srt_lic_3.png

.. GENERATED FROM PYTHON SOURCE LINES 86-99

.. code-block:: default


    SRTpart.VISIBLE = False
    session.ensight.part.select_byname_begin("(CASE:Case 1)Shuttle")
    session.ensight.variables.evaluate("OffsetVar = OffsetVar(plist,Momentum,2e-05)")

    session.ensight.case.sft_variable("OffsetVar")
    session.ensight.case.sft_contrast("ON")
    session.ensight.case.sft_norm_length(1.000000)

    session.ensight.part.select_byname_begin("(CASE:Case 1)Shuttle")
    session.ensight.part.show_sft("ON")
    session.show("image", width=800, height=600)


.. GENERATED FROM PYTHON SOURCE LINES 100-102

Thumbnail
sphinx_gallery_thumbnail_path = '_static/05_srt_lic_3.png'

.. GENERATED FROM PYTHON SOURCE LINES 102-105

.. code-block:: default



    session.close()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.000 seconds)


.. _sphx_glr_download__examples_00-basic_05-surface_traces_lic.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 05-surface_traces_lic.py <05-surface_traces_lic.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 05-surface_traces_lic.ipynb <05-surface_traces_lic.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
